<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/btn01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="modify content" />

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <EditText
                android:id="@+id/et_01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="input account"
                android:text="123456" />

            <Button
                android:id="@+id/btn02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="login" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>